@@ -1,3 +1,5 @@
+* #2751 Add keybindings for max/min brightness/volume
+
 Snapshot 040c94d181
 
 * #2099 Tweak a color pair as requested by Walter. (marco)
